# auto-presser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: keypress.rs  main.rs  state.rs  ui.rs
