[package]
name = "auto-presser"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.0"
enigo = "0.1"
tokio = { version = "1.0", features = ["full"] }
global-hotkey = "0.2"
tray-item = "0.7"
winit = "0.28"
device_query = "1.1.3"
rdev = { version = "0.5.3", features = ["unstable_grab"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

#![windows_subsystem = "windows"]

