[package]
name = "auto-presser"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.0"
enigo = "0.1"
device_query = "2.1.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false